--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-762.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-307.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇬🇧 英国-3.46MB/s(Youtube:不良林), server: uk-manchester.eiw2eemo.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: uk-manchester.eiw2eemo.com}}
-  - {name: 🇺🇸 美国-22.08MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.97MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-5.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-308.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-1.10MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-383.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇮🇳 印度-564.7KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-3.09MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
   - {name: 🇫🇷 法国-926.3KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇳🇱 荷兰-350.9KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
       - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
       - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
       - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
       - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
       - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
       - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-762.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-22.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
       - 🇫🇷 法国-926.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
