--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.97MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇨🇳 中国-5.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-308.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇰🇷 韩国-1.10MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.00MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇦 加拿大-2.67MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇳 中国-383.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇮🇳 印度-564.7KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-3.09MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-308.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-383.0KB/s(Youtube:不良林)
       - 🇮🇳 印度-564.7KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.09MB/s(Youtube:不良林)
