--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇹🇭 泰国-264.8KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-152.4KB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-873.6KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-3.48MB/s(Youtube:不良林), server: 43.134.229.238, port: 20085, type: vmess, uuid: eb35ce5a-7b4d-4fbc-d23f-a57c74872634, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.54MB/s(Youtube:不良林), server: 52.58.249.78, port: 57824, type: ss, cipher: chacha20-ietf-poly1305, password: pryhyxya}
+  - {name: 🇺🇸 美国-22.32MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-459.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-19.39MB/s(Youtube:不良林), server: zf1.333210.xyz, port: 40383, type: vmess, uuid: 04e1a3ce-9921-40db-a9eb-9f754491e111, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /bby, ws-headers: {Host: zf1.333210.xyz}}
+  - {name: 🇬🇧 英国-3.45MB/s(Youtube:不良林), server: 146.70.46.68, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.70.46.68}}
   - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-9.46MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.62MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-264.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇹🇭 泰国-264.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-264.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇹🇭 泰国-264.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-264.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-264.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-264.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-873.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.48MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-9.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.62MB/s(Youtube:不良林)
